Nearly finished tutorial
Added search field, things are not really working.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 <body>
 
   <div id='photos-wrap'>
+  	<form id='search'>
+      <button type='submit' id='search-button' tabindex='2'>
+        <span class='button-content'>Search</span>
+      </button>
+      <div class='search-wrap'>
+        <input class='search-tag' type='text' tabindex='1' />
+      </div>
+    </form>
   </div>
 
 </body>
