Trying to fix 'tag' in input field

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 
 </head>
 <body>
-
-  <div id='photos-wrap'>
-  	<form id='search'>
+  <div>
+    <form id='search'>
       <button type='submit' id='search-button' tabindex='2'>
         <span class='button-content'>Search</span>
       </button>
@@ -18,6 +17,10 @@
         <input class='search-tag' type='text' tabindex='1' />
       </div>
     </form>
+  </div>
+  
+  <div id='photos-wrap'>
+  	
   </div>
 
 </body>
